# Adapter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART-GEMINI-CLI.md  README.md  SETUP_COMPLETE.md  pyproject.toml  test_gemini_integration.py  tox.ini
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: authentication.md  configuration.md  gemini-cli-integration.md  gemini-cli-model-command.md  gemini-cli-tool-integration.md  gemini-cli-update-persistence.md  gemini-integration.md  getting-started.md  troubleshooting.md
examples/: basic-config.yaml  claude-config.yaml  gemini-config.yaml
scripts/: auto_recover_commands.py  install_gemini_model_command.py  install_model_direct_command.py  register_gemini_tool.py  simulate_gemini_update.py
specs/001-vertex-ai-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vertex-ai-adapter/checklists/: requirements.md
specs/001-vertex-ai-adapter/contracts/: authentication.md  cli-commands.md  speckit-bridge.md  vertex-ai-client.md
specs/002-gemini-cli-model-command/: ANALYSIS_REPORT.md  REMEDIATION_VERIFICATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gemini-cli-model-command/checklists/: requirements-quality-validation.md  requirements-quality.md
specs/002-gemini-cli-model-command/contracts/: gemini-cli-command.md  interactive-menu.md  model-metadata.md
tests/: conftest.py
tests/e2e/: test_model_command_e2e.py
tests/integration/: test_auth_flow.py  test_error_recovery.py  test_gemini_cli_integration.py  test_model_menu_workflow.py  test_setup_workflow.py  test_vertex_api.py
tests/performance/: test_menu_performance.py
tests/unit/: test_api_schema.py  test_auth.py  test_bridge.py  test_cli_config.py  test_cli_init.py  test_cli_test.py  test_client.py  test_config.py  test_config_schema.py  test_exceptions.py  test_gemini_cli_integration.py  test_metrics.py  test_model_interactive.py  test_model_interactive_errors.py  test_models.py  test_retry.py
vertex_spec_adapter/cli/: main.py  utils.py
vertex_spec_adapter/cli/commands/: __init__.py  config.py  init.py  model_interactive.py  models.py  run.py  test.py
vertex_spec_adapter/core/: auth.py  client.py  config.py  exceptions.py  models.py
vertex_spec_adapter/gemini_cli/: __init__.py  command_installer.py  model.toml  model_command.py  model_direct.toml  model_inject.py
vertex_spec_adapter/schemas/: api.py  config.py
vertex_spec_adapter/speckit/: bridge.py  templates.py
vertex_spec_adapter/tools/: __init__.py  gemini_cli_integration.py  vertex_adapter_tool.py
vertex_spec_adapter/utils/: logging.py  metrics.py  retry.py
